<resources>
    <string name="app_name">postaround</string>
    <string name="login_with_instagram">login with instagram</string>
    <string name="you_will_see_the_result_here">You will see the result here</string>
    <string name="login_successfully">Login was successful! :D</string>
    <string name="login_failed">Login failed :(</string>
    <string name="login_undefined">Something odd happened :\\</string>
    <string name="go_to_locations">GO TO LOCATIONS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="brickell_city_center">Brickell City Center</string>
    <string name="your_current_location">Your current location</string>
    <string name="ig_username">iamjalejandro</string>
    <string name="ig_description">Looking for #something</string>
    <string name="where_are_you_right_now">Where are you right now?</string>
    <string name="go_to_feed">Go to feed</string>
    <string name="we_need_you_to_give_us_permission_to_access_to_your_location">We need your permission to access your location</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="select_the_distance">Select the distance</string>
    <string name="distance_sample">5000 meters</string>
    <string name="log_in_with_instagram">Log in with instagram</string>
    <string name="login_desc_text">Check out instagramers around you the easiest way!</string>
    <string name="post_data">P.S.: Don’t worry… this will be our secret ;)</string>
    <string name="ok_no_problema">OK, NO PROBLEMA</string>
    <string name="we_need_your_permission">We need your permission to see instagramers around you</string>
    <string name="go_ahead">GO AHEAD!</string>
    <string name="no_instagramers_around">Weird… no instagramers around you… but we found some crickets :)</string>
    <string name="no_instagramers_around_max">Weird… no instagramers in %d meters around you… but we found some crickets :)</string>
    <string name="search_til_you_find_something">Search til\' you find something</string>
    <string name="you_dont_have_access">It seems like you don\'t have access to the app, just drop me an email and you will have it.</string>
    <string name="if_you_already_contacted_me">If you already contacted me, go to your sandbox invites and accept the invitation.</string>
    <string name="drop_me_a_line">CONTACT ME</string>
    <string name="something_wrong_happened">Something wrong happened. Please, try again.</string>
    <string name="you_found_wormhole">You found a wormhole!</string>
    <string name="lets_try_again">Let\'s try again</string>
</resources>
