<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.juanhernandez.postaround.MainActivity">

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_will_see_the_result_here"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tvAccessToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_will_see_the_result_here"
        android:layout_above="@id/tvState"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/tvState"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginWithInstagramClicked"
        android:text="@string/login_with_instagram"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnGoToFeed"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToFeedClicked"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_feed" />

</RelativeLayout>
