<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.juanhernandez.postaround.ui.login.IGLoginActivity">

    <!-- need your permission -->
    <LinearLayout
        android:id="@+id/llDontHaveAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/you_dont_have_access"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/if_you_already_contacted_me"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/default_btn_ripple"
            android:padding="@dimen/padding_medium"
            android:text="@string/drop_me_a_line"
            android:onClick="contactMeClicked"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <WebView
        android:id="@+id/wvLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>